--- a/LaunchRand/LaunchRand.csproj
+++ b/LaunchRand/LaunchRand.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9C13DAFD-F599-4A6D-B86D-6FA99049B13F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>LaunchRand</RootNamespace>
     <AssemblyName>LaunchRand</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
